Changed \\ to / for file directories. Removed hard-coded database username/password/name.